--- a/_layouts/post-copy.html
+++ b/_layouts/post-copy.html
@@ -12,8 +12,8 @@
 </head>
 <body>
 
-  <!-- Conteúdo do post -->
-  {{ content }}
+  <h1>{{ page.title }}</h1> <!-- título do post -->
+  {{ content }}             <!-- conteúdo do Markdown -->
 
   <!-- JS externo para copiar -->
   <script src="/assets/js/copy.js"></script>
